# GEAR

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  GEAR.sln  GEAR_CORE.sln  README.md  Redistribution.txt  gear_planning.txt  license.txt
GEARBOX/: CMakeLists.txt  GEARBOX.vcxproj  GEARBOX.vcxproj.filters  GearBox.qrc  config.gbcf  gearbox_en.ts  gearbox_ja.qm  gearbox_ja.ts
GEARBOX/icons/: icon_website.txt  icons8-file-512.psd
GEARBOX/res/assets/: DefaultMaterial.gaf  Drone.gaf  Material.003.gaf  Material.gaf  Mirror.gaf  RustIron.gaf  defaultMat.gaf
GEARBOX/res/img/: texture_licenses.txt
GEARBOX/res/scenes/: Test.gsf  Test2.gsf  Test3.gsf  current_scene.gsf.json
GEARBOX/res/scripts/: TestScript.cpp  TestScript2.cpp
GEARBOX/src/: GearBox.cpp  GearBox.h  GearBox.ui  GearBoxSceneHierarchy.cpp  GearBoxSceneHierarchy.h  GearBoxSceneHierarchy.ui  GearBoxScenePlayer.cpp  GearBoxScenePlayer.h  GearBoxScenePlayer.ui  MenuBar.cpp  MenuBar.h  UIContext.cpp  UIContext.h  gearbox_common.cpp  gearbox_common.h  main.cpp
GEARBOX/src/ComponentUI/: CameraComponentUI.cpp  CameraComponentUI.h  ComponentUI.cpp  ComponentUI.h  ModelComponentUI.cpp  ModelComponentUI.h  NameComponentUI.cpp  NameComponentUI.h  SkyboxComponentUI.cpp  SkyboxComponentUI.h  TransformComponentUI.cpp  TransformComponentUI.h
GEARBOX/src/Panels/: BasePanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  ContentEditorPanel.cpp  ContentEditorPanel.h  Panel.h  Panels.h  ProjectPanel.cpp  ProjectPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
GEAR_CORE/: BuildShaders.bat  CMakeLists.txt  GEAR_CORE.vcxproj  GEAR_CORE.vcxproj.filters  main.cpp
GEAR_CORE/dep/ASSIMP/: AssimpSDK.lnk  VERSION.txt
GEAR_CORE/dep/DATE/: date.h
GEAR_CORE/dep/OPENAL/: LICENCE.txt
GEAR_CORE/dep/STBI/: LICENCE.txt  stb_image.cpp
GEAR_CORE/res/Borderlands 2 - Maya/: generic_item.mesh
GEAR_CORE/res/gear_core/: GEAR_logo.psd  GEAR_logo_square.psd
GEAR_CORE/res/pipelines/: BloomDownsample.grpf  BloomPrefilter.grpf  BloomUpsample.grpf  Cube.grpf  DebugBoxes.grpf  DebugCoordinateAxes.grpf  DebugCoordinateAxes.grpf.json  DebugCopy.grpf  DebugCopy.grpf.json  DebugShowCubemap.grpf  DebugShowDepth.grpf  DebugShowDepthCubemap.grpf  DiffuseIrradiance.grpf  DiffuseIrradiance.grpf.json  EquirectangularToCube.grpf  Font.grpf.json  GenerateMipMaps.grpf.json  HDR.grpf  HDR.grpf.json  Mipmap.grpf  MipmapArray.grpf  PBROpaque.grpf  PBROpaque.grpf.json  Shadow.grpf  ShadowCascades.grpf  ShadowSingle.grpf  SpecularBRDF_LUT.grpf  SpecularBRDF_LUT.grpf.json  SpecularIrradiance.grpf  SpecularIrradiance.grpf.json  Text.grpf  Text.grpf.json  basic.grpf.json  cube.grpf.json  equirectangularToCube.grpf.json  mipmap.grpf.json  mipmapArray.grpf.json
GEAR_CORE/res/shaders/: Cube.hlsl  Cube.json  Debug.hlsl  Debug.json  Depth.h  EquirectangularToCube.hlsl  EquirectangularToCube.json  Mipmap.json  RayTracing.hlsl  Shadow.hlsl  Shadow.json  Text.hlsl  Text.json  basic.frag  basic.vert  cube.frag  cube.vert  depth.frag  depth.vert  fbo.frag  fbo.vert  font.frag  font.vert  pbr.frag  pbr.vert  shadertoolsconfig.json
GEAR_CORE/src/: gear.h  gear_common.h  gear_core.h  gear_core_common.cpp  gear_core_common.h
GEAR_CORE/src/Animation/: Animation.h  Animator.cpp  Animator.h
GEAR_CORE/src/Asset/: Asset.cpp  Asset.h  AssetDataBuffer.h  AssetFile.cpp  AssetFile.h  AssetManager.cpp  AssetManager.h  AssetMetadata.h  AssetRegistry.cpp  AssetRegistry.h  EditorAssetManager.cpp  EditorAssetManager.h
GEAR_CORE/src/Audio/: AudioInterfaces.cpp  AudioInterfaces.h  AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h  Listener.cpp  Listener.h
GEAR_CORE/src/Core/: Application.cpp  Application.h  ApplicationContext.cpp  ApplicationContext.h  AssetFile.cpp  AssetFile.h  CommandLineOptions.h  ConfigFile.cpp  ConfigFile.h  DataBuffer.h  DynamicLibrary.h  EntryPoint.h  EnumStringMaps.h  FileDialog.cpp  FileDialog.h  FontLibrary.cpp  FontLibrary.h  Hashing.h  JsonFileHelper.cpp  JsonFileHelper.h  Log.cpp  Log.h  ParseStack.h  PlatformMacros.h  Sequencer.h  StringConversion.cpp  StringConversion.h  Timer.cpp  Timer.h  TypeLibrary.h  TypesCppHlsl.h  UUID.cpp  UUID.h  timer.cpp
GEAR_CORE/src/Graphics/: AllocatorManager.cpp  AllocatorManager.h  Colour.cpp  Colour.h  ColourFunctions.h  DebugRender.cpp  DebugRender.h  FrameGraph.cpp  FrameGraph.h  Framebuffer.cpp  Framebuffer.h  Frustum.cpp  Frustum.h  GenerateMipMaps.cpp  GenerateMipMaps.h  ImageProcessing.cpp  ImageProcessing.h  Indexbuffer.cpp  Indexbuffer.h  MemoryBlockManager.cpp  MemoryBlockManager.h  Picker.cpp  Picker.h  PostProcessing.cpp  PostProcessing.h  RenderGraph.cpp  RenderGraph.h  RenderPipeline.cpp  RenderPipeline.h  RenderSurface.cpp  RenderSurface.h  Renderer.cpp  Renderer.h  Storagebuffer.h  Texture.cpp  Texture.h  UniformBufferStructures.h  Uniformbuffer.cpp  Uniformbuffer.h  Vertexbuffer.cpp  (+6 more)
GEAR_CORE/src/Input/: InputInterfaces.cpp  InputInterfaces.h  InputManager.cpp  InputManager.h
GEAR_CORE/src/Objects/: Camera.cpp  Camera.h  Font.cpp  Font.h  FontLibrary.cpp  FontLibrary.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ObjectInterface.cpp  ObjectInterface.h  Probe.cpp  Probe.h  Skybox.cpp  Skybox.h  Text.cpp  Text.h  Transform.h  font.h  light.cpp  mesh.h
GEAR_CORE/src/Project/: Project.cpp  Project.h
GEAR_CORE/src/Scene/: Components.cpp  Components.h  Entity.cpp  Entity.h  INativeScript.h  NativeScript.h  NativeScriptManager.cpp  NativeScriptManager.h  Scene.cpp  Scene.h
GEAR_CORE/src/UI/: ConfigFile.cpp  ConfigFile.h  MenuBar.cpp  MenuBar.h  UIContext.cpp  UIContext.h
GEAR_CORE/src/Utils/: Assimp.h  FileUtils.h  ModelLoader.cpp  ModelLoader.h
GEAR_CORE/src/audio/: audiosource.cpp  audiosource.h  listener.cpp  listener.h
GEAR_CORE/src/core/: string_conversion.cpp  string_conversion.h  timer.cpp  timer.h
GEAR_CORE/src/core.tmp/: StringConversion.cpp
GEAR_NATIVE_SCRIPT/: CMakeLists.txt  DllMain.cpp  GEAR_NATIVE_SCRIPT.vcxproj
(+391 files in other folders)
