cmake_minimum_required(VERSION 3.27)

message(STATUS "GEAR_NATIVE_SCRIPT")

add_library(GEAR_NATIVE_SCRIPT SHARED)

#SRC
set(SRC_HEADERS
)
set(SRC_CPP_FILES
	"DllMain.cpp"
)
target_sources(GEAR_NATIVE_SCRIPT PRIVATE ${SRC_CPP_FILES} ${SRC_HEADERS})
source_group("src" FILES ${SRC_CPP_FILES} ${SRC_HEADERS})

#APPLICATION_NATIVE_SCRIPTS_DIR
file(GLOB APPLICATION_NATIVE_SCRIPTS_CPP_FILES 
	${APPLICATION_NATIVE_SCRIPTS_DIR}/*.cpp
)
file(GLOB APPLICATION_NATIVE_SCRIPTS_HEADERS 
	${APPLICATION_NATIVE_SCRIPTS_DIR}/*.h
)
target_sources(GEAR_NATIVE_SCRIPT PRIVATE ${APPLICATION_NATIVE_SCRIPTS_CPP_FILES} ${APPLICATION_NATIVE_SCRIPTS_HEADERS})
source_group("ApplicationNativeScripts" FILES ${APPLICATION_NATIVE_SCRIPTS_CPP_FILES} ${APPLICATION_NATIVE_SCRIPTS_HEADERS})

target_link_libraries(GEAR_NATIVE_SCRIPT PRIVATE ARC MIRU_CORE GEAR_CORE)

target_include_directories(GEAR_NATIVE_SCRIPT PRIVATE 
	"${CMAKE_CURRENT_SOURCE_DIR}/../GEAR_CORE/src/"
	"${CMAKE_CURRENT_SOURCE_DIR}/../External/"
	"${CMAKE_CURRENT_SOURCE_DIR}/../External/MIRU/External/"
)